Fixed icon path

--- a/TrayUtility/UtilitiesHandler.csproj
+++ b/TrayUtility/UtilitiesHandler.csproj
@@ -117,6 +117,8 @@
       <Version>11.2.1</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\app_icon.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
