--- a/EU.HiHowAreYou/EU.HiHowAreYou.csproj
+++ b/EU.HiHowAreYou/EU.HiHowAreYou.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>C:\C#\TestProject\TrayUtility\bin\Debug\netcoreapp3.0</OutputPath>
+    <OutputPath>C:\C#\tray-utility-app\TrayUtility\bin\Debug</OutputPath>
   </PropertyGroup>
   
   <ItemGroup>
