More plugins. Fixed UI things and etc.

--- a/EU.DropDBSample/EU.DropDBSample.csproj
+++ b/EU.DropDBSample/EU.DropDBSample.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>..\UtilitiesHandler\bin\Debug\</OutputPath>
+    <OutputPath>C:\C#\tray-utility-app\TrayUtility\bin\Debug\</OutputPath>
   </PropertyGroup>
-  
+
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
