--- a/EU.HelloWorld/EU.HelloWorld.csproj
+++ b/EU.HelloWorld/EU.HelloWorld.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>C:\C#\tray-utility-app\TrayUtility\bin\Debug</OutputPath>
+    <OutputPath>..\UtilitiesHandler\bin\Debug\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
