Add a new utility: CreateDemoDataStatus

--- a/EU.CreateDemoDataStatus/EU.CreateDemoDataStatus.csproj
+++ b/EU.CreateDemoDataStatus/EU.CreateDemoDataStatus.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CreateDemoData.cs" />
+    <Compile Include="CreateDemoDataStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
