--- a/EU.CopySqlServerBatchParserFile/EU.CopySqlServerBatchParserFile.csproj
+++ b/EU.CopySqlServerBatchParserFile/EU.CopySqlServerBatchParserFile.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8183EC39-FD6C-4CBB-8EE8-80CBBF656F05}</ProjectGuid>
+    <ProjectGuid>{DA32ED2F-3312-48F5-B1B2-F984CFDA10CA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EU.DeleteOutputFolder</RootNamespace>
-    <AssemblyName>EU.DeleteOutputFolder</AssemblyName>
+    <RootNamespace>EU.CopySqlServerBatchParserFile</RootNamespace>
+    <AssemblyName>EU.CopySqlServerBatchParserFile</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,14 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DeleteOutputFolder.cs" />
+    <Compile Include="CopySqlServerBatchParserFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj">
-      <Project>{FE0CBE4F-0233-4D2C-8F68-5125AA3024E4}</Project>
-      <Name>Common</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
